anon/dashboard/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: kubernetes-dashboard-ingress
        namespace: kubernetes-dashboard
        annotations:
                # use the shared ingress-nginx
                # 이 클래스 정보를 이용해 ingress-nginx-controller 가 설정 정보들을 수집함
                kubernetes.io/ingress.class: "nginx"
                nginx.org/ssl-services: "kubernetes-dashboard"
                ingress.kubernetes.io/ssl-passthrough: "true"
                # backend-protocol 로 이름이 바뀌었음. secure-backend 는 더이상 동작하지 않음.
                nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
                # nginx.ingress.kubernetes.io/app-root: /
                nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
        tls:
                - hosts:
                  - cluster.rpi.nicesj.com
                  secretName: cluster
        rules:
        - host: cluster.rpi.nicesj.com
          http:
                paths:
                - path: /dashboard(/|$)(.*)
                  backend:
                        serviceName: kubernetes-dashboard
                        servicePort: 443
# 아래 구분자로 여러개의 spec file 을 적용할 수 있음.
# ---
